<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.pizzabakerz.calculator.CalculatorActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_alignLeft="@+id/display"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/display"
        android:layout_marginBottom="23dp">

        <Button
            android:id="@+id/zeroBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="onClickNumber"
            android:text="@string/_0"
            android:textSize="36sp" />

        <Button
            android:id="@+id/oneBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="1"
            android:layout_row="0"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onClickNumber"
            android:text="@string/_1"
            android:textSize="36sp" />

        <Button
            android:id="@+id/twoBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="2"
            android:layout_row="0"
            android:background="@android:color/holo_blue_dark"
            android:onClick="onClickNumber"
            android:text="@string/_2"
            android:textSize="36sp" />

        <Button
            android:id="@+id/threeBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="3"
            android:layout_row="0"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onClickNumber"
            android:text="@string/_3"
            android:textSize="36sp" />

        <Button
            android:id="@+id/fourBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onClickNumber"
            android:text="@string/_4"
            android:textSize="36sp" />

        <Button
            android:id="@+id/eightBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="0"
            android:layout_row="2"
            android:background="@android:color/holo_blue_dark"
            android:onClick="onClickNumber"
            android:text="@string/_8"
            android:textSize="36sp" />

        <Button
            android:id="@+id/fiveBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="1"
            android:layout_row="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="onClickNumber"
            android:text="@string/_5"
            android:textSize="36sp" />

        <Button
            android:id="@+id/sixBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="2"
            android:layout_row="1"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onClickNumber"
            android:text="@string/_6"
            android:textSize="36sp" />

        <Button
            android:id="@+id/nineBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onClickNumber"
            android:text="@string/_9"
            android:textSize="36sp" />

        <Button
            android:id="@+id/mulBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="2"
            android:layout_row="2"
            android:background="@android:color/holo_blue_dark"
            android:onClick="onClickOperator"
            android:text="@string/multiply"
            android:textSize="36sp" />

        <Button
            android:id="@+id/sevenBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="3"
            android:layout_row="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="onClickNumber"
            android:text="@string/_7"
            android:textSize="36sp" />

        <Button
            android:id="@+id/divBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="3"
            android:layout_row="2"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onClickOperator"
            android:text="@string/division"
            android:textSize="36sp" />

        <Button
            android:id="@+id/decimalBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="0"
            android:layout_row="3"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onClickNumber"
            android:text="@string/decimalPoint"
            android:textSize="36sp" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="1"
            android:layout_row="3"
            android:background="@android:color/holo_blue_dark"
            android:onClick="onClickOperator"
            android:text="@string/addition"
            android:textSize="36sp" />

        <Button
            android:id="@+id/subBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="2"
            android:layout_row="3"
            android:background="@android:color/holo_blue_bright"
            android:onClick="onClickOperator"
            android:text="@string/subtract"
            android:textSize="36sp" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_column="3"
            android:layout_row="3"
            android:background="@android:color/holo_red_light"
            android:onClick="onClickEqual"
            android:text="@string/equal"
            android:textSize="36sp" />

    </GridLayout>

    <TextView
        android:id="@+id/display"
        android:layout_width="550dp"
        android:layout_height="200dp"
        android:layout_below="@+id/appname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="bottom|end"
        android:inputType="none"
        android:text="@string/zero"
        android:textColor="@color/colorPrimary"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/kidkulator"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp" />

</RelativeLayout>
